dataset1235/2025-2/1955397009/users/2372342006/executions/2304143742_4093783519.log
== RUN (2025-09-02 13:00:08)
-- CODE: 
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

num = input("Digite um numero: ")

if (num % 2 == 0)
	mensagem = ("sim")
else
	mensagem = ("nao")

print(mensagem.lower())
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
842
---- correct output:
sim
-- ERROR:
File "XXXX", line 7
    if (num % 2 == 0)
                     ^
SyntaxError: expected ':'
-- TEST CASE 2:
---- input:
11
---- correct output:
nao
-- ERROR:
File "XXXX", line 7
    if (num % 2 == 0)
                     ^
SyntaxError: expected ':'
-- TEST CASE 3:
---- input:
55
---- correct output:
nao
-- ERROR:
File "XXXX", line 7
    if (num % 2 == 0)
                     ^
SyntaxError: expected ':'
-- TEST CASE 4:
---- input:
3
---- correct output:
nao
-- ERROR:
File "XXXX", line 7
    if (num % 2 == 0)
                     ^
SyntaxError: expected ':'
-- TEST CASE 5:
---- input:
648
---- correct output:
sim
-- ERROR:
File "XXXX", line 7
    if (num % 2 == 0)
                     ^
SyntaxError: expected ':'
-- TEST CASE 6:
---- input:
22
---- correct output:
sim
-- ERROR:
File "XXXX", line 7
    if (num % 2 == 0)
                     ^
SyntaxError: expected ':'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-02 13:01:10)
-- CODE: 
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

num = input("Digite um numero: ")

if (num%2 = 0):
	mensagem = ("sim")
else:
	mensagem = ("nao")

print(mensagem.lower())
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
842
---- correct output:
sim
-- ERROR:
File "XXXX", line 7
    if (num%2 = 0):
        ^^^^^
SyntaxError: cannot assign to expression here. Maybe you meant '==' instead of '='?
-- TEST CASE 2:
---- input:
11
---- correct output:
nao
-- ERROR:
File "XXXX", line 7
    if (num%2 = 0):
        ^^^^^
SyntaxError: cannot assign to expression here. Maybe you meant '==' instead of '='?
-- TEST CASE 3:
---- input:
55
---- correct output:
nao
-- ERROR:
File "XXXX", line 7
    if (num%2 = 0):
        ^^^^^
SyntaxError: cannot assign to expression here. Maybe you meant '==' instead of '='?
-- TEST CASE 4:
---- input:
3
---- correct output:
nao
-- ERROR:
File "XXXX", line 7
    if (num%2 = 0):
        ^^^^^
SyntaxError: cannot assign to expression here. Maybe you meant '==' instead of '='?
-- TEST CASE 5:
---- input:
648
---- correct output:
sim
-- ERROR:
File "XXXX", line 7
    if (num%2 = 0):
        ^^^^^
SyntaxError: cannot assign to expression here. Maybe you meant '==' instead of '='?
-- TEST CASE 6:
---- input:
22
---- correct output:
sim
-- ERROR:
File "XXXX", line 7
    if (num%2 = 0):
        ^^^^^
SyntaxError: cannot assign to expression here. Maybe you meant '==' instead of '='?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-02 13:00:21)
-- CODE: 
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

num = input("Digite um numero: ")

if (num % 2 == 0):
	mensagem = ("sim")
else:
	mensagem = ("nao")

print(mensagem.lower())
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
842
---- correct output:
sim
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    if (num % 2 == 0):
        ~~~~^~~
TypeError: not all arguments converted during string formatting
-- TEST CASE 2:
---- input:
11
---- correct output:
nao
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    if (num % 2 == 0):
        ~~~~^~~
TypeError: not all arguments converted during string formatting
-- TEST CASE 3:
---- input:
55
---- correct output:
nao
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    if (num % 2 == 0):
        ~~~~^~~
TypeError: not all arguments converted during string formatting
-- TEST CASE 4:
---- input:
3
---- correct output:
nao
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    if (num % 2 == 0):
        ~~~~^~~
TypeError: not all arguments converted during string formatting
-- TEST CASE 5:
---- input:
648
---- correct output:
sim
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    if (num % 2 == 0):
        ~~~~^~~
TypeError: not all arguments converted during string formatting
-- TEST CASE 6:
---- input:
22
---- correct output:
sim
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    if (num % 2 == 0):
        ~~~~^~~
TypeError: not all arguments converted during string formatting
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-02 12:59:19)
-- CODE: 
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

num = input("Digite um numero: ")

if (num % 2 == 0)
	mensagem = "sim"
else
	mensagem = "nao"

print(mensagem.lower())
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
842
---- correct output:
sim
-- ERROR:
File "XXXX", line 7
    if (num % 2 == 0)
                     ^
SyntaxError: expected ':'
-- TEST CASE 2:
---- input:
11
---- correct output:
nao
-- ERROR:
File "XXXX", line 7
    if (num % 2 == 0)
                     ^
SyntaxError: expected ':'
-- TEST CASE 3:
---- input:
55
---- correct output:
nao
-- ERROR:
File "XXXX", line 7
    if (num % 2 == 0)
                     ^
SyntaxError: expected ':'
-- TEST CASE 4:
---- input:
3
---- correct output:
nao
-- ERROR:
File "XXXX", line 7
    if (num % 2 == 0)
                     ^
SyntaxError: expected ':'
-- TEST CASE 5:
---- input:
648
---- correct output:
sim
-- ERROR:
File "XXXX", line 7
    if (num % 2 == 0)
                     ^
SyntaxError: expected ':'
-- TEST CASE 6:
---- input:
22
---- correct output:
sim
-- ERROR:
File "XXXX", line 7
    if (num % 2 == 0)
                     ^
SyntaxError: expected ':'
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
